// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IrregularArcs renders svg irregular arcs with the right coordinates / dimensions 1`] = `
<g
  transform="translate(400,300)"
  class="ez-irregular-arcs"
>
  <path
    d="M-172.3413567771364,-30.388431091712754L0,0Z"
    fill="red"
    stroke="red"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
  <path
    d="M1.8369701987210297e-14,-300L0,0Z"
    fill="blue"
    stroke="blue"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
  <path
    d="M81.22978403984635,223.17699743665324L0,0Z"
    fill="green"
    stroke="green"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
</g>
`;

exports[`IrregularArcs renders svg irregular arcs with the right coordinates / dimensions 2`] = `
<g
  transform="translate(400,300)"
  class="ez-irregular-arcs"
>
  <path
    d="M-172.3413567771364,-30.388431091712754A175,175,0,0,1,-3.214697847761802e-14,-175L0,0Z"
    fill="red"
    stroke="red"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
  <path
    d="M1.8369701987210297e-14,-300A300,300,0,0,1,102.60604299770064,281.9077862357725L0,0Z"
    fill="blue"
    stroke="blue"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
  <path
    d="M81.22978403984635,223.17699743665324A237.5,237.5,0,0,1,-233.89184134039942,-41.24144219589588L0,0Z"
    fill="green"
    stroke="green"
    data-testid="ez-arc"
    class="ez-arc"
  >
  </path>
</g>
`;
